@@ -1,4 +1,5 @@
 0.05
+ - Add support for filtering by control fields.
  - Improve abstract and description.
  - Regen README file.
 
